# lasertag-smart-sensor

./: .gitignore  .gitmodules  README.md  generate-eclipse-project.sh
drawings/: 3mm-glass.dxf
master-pc/: master-emulator.py
misc/: address-collision-prob.py
schematic/round/: round-sensor.kicad_pcb  round-sensor.net  round-sensor.sch
schematic/square/: sensor.kicad_pcb  sensor.net  sensor.pro  sensor.sch
src/: .gitignore  CMakeLists.txt  build.sh  flash.sh  generate-eclipse-project.sh  smart-sensor.ioc
src/master-pc/: CMakeLists.txt  main-loop.cpp  main-loop.hpp  main.cpp  serial-port.cpp  serial-port.hpp  signal-handler.cpp  signal-handler.hpp  ssp-driver.cpp  ssp-master.cpp  ssp-master.hpp
src/smart-sensor/: .gitignore  CMakeLists.txt  smart-sensor.ioc
src/smart-sensor/Drivers/newlib/: newlib.c
src/smart-sensor/Inc/: ir-receiver.h  ir-timings.h  main.h  precision-clock.h  rgb.h  smart-sensor.h  ssp-sensor-part.h  ssp.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h  tim.h  uart-transiver.h  usart.h
src/smart-sensor/Src/: gpio.c  ir-receiver.c  main.c  newlib-write-driver.c  precision-clock.c  rgb.c  smart-sensor.c  ssp-driver.c  ssp-sensor-part.c  stm32f0xx_it.c  tim.c  uart-transiver.c  usart.c
